--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_svg: ^1.1.6
   dots_indicator: ^2.1.0
   pin_code_fields: ^7.4.0
+  easy_localization: ^3.0.1
   custom_radio_grouped_button: ^2.1.2+2
 
 dev_dependencies:
