--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   pin_code_fields: ^7.4.0
   easy_localization: ^3.0.1
   custom_radio_grouped_button: ^2.1.2+2
+  flutter_bloc: ^8.1.2
+  bloc: ^8.1.1
 
 dev_dependencies:
   flutter_test:
@@ -73,6 +75,7 @@ flutter:
   assets:
     - assets/icons/SVG/
     - assets/images/
+    - assets/translations/
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
