--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   easy_localization: ^3.0.1
   custom_radio_grouped_button: ^2.1.2+2
   flutter_bloc: ^8.1.2
-  bloc: ^8.1.1
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
