--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   custom_radio_grouped_button: ^2.1.2+2
   flutter_bloc: ^8.1.2
   equatable: ^2.0.5
+  # horizontal_card_pager: ^1.1.1
+  numberpicker: ^2.1.1
+
 
 dev_dependencies:
   flutter_test:
