--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   flutter_bloc: ^8.1.2
   equatable: ^2.0.5
   numberpicker: ^2.1.1
+  percent_indicator: ^4.0.1
+  fl_chart: ^0.45.0
  
 
 
