--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,9 @@ dependencies:
   equatable: ^2.0.5
   numberpicker: ^2.1.2
   percent_indicator: ^4.0.1
-  fl_chart: ^0.45.0
+  # fl_chart: ^0.45.0
+  fl_chart: ^0.63.0
+  smooth_page_indicator: ^1.1.0
  
 
 
