--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   ff_navigation_bar_plus: ^0.1.5
   proste_bezier_curve: ^2.0.2
+  convex_bottom_bar: ^3.2.0
+  circular_menu: ^2.0.1
+  fab_circular_menu_plus: ^0.0.1
  
 
 
