--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,7 @@ dependencies:
   convex_bottom_bar: ^3.2.0
   circular_menu: ^2.0.1
   fab_circular_menu_plus: ^0.0.1
- 
+  info_popup: ^3.0.6
 
 
 dev_dependencies:
