--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   circular_menu: ^2.0.1
   fab_circular_menu_plus: ^0.0.1
   info_popup: ^3.0.6
+  flutter_credit_card: ^3.0.7
 
 
 dev_dependencies:
